--- a/app/src/main/res/layout/fragment_tab1.xml
+++ b/app/src/main/res/layout/fragment_tab1.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_gravity="center">
+        android:layout_marginTop="@dimen/_50sdp">
 
 
 
@@ -50,6 +50,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
+                android:gravity="center"
                 android:paddingBottom="@dimen/_20sdp"
                 android:background="@drawable/edittext_border"
                 android:layout_marginStart="@dimen/_20sdp"
@@ -99,6 +100,7 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="@dimen/_20sdp"
                 android:inputType="number"
+                android:gravity="center"
                 android:background="@drawable/edittext_border"
                 android:layout_marginStart="@dimen/_80sdp"
                 android:layout_marginEnd="@dimen/_20sdp"/>
@@ -145,6 +147,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="@dimen/_20sdp"
+                android:gravity="center"
                 android:inputType="number"
                 android:background="@drawable/edittext_border"
                 android:layout_marginStart="@dimen/_72sdp"
@@ -167,9 +170,18 @@
             android:textAllCaps="false"
             android:textSize="@dimen/_10sdp"
             android:textColor="@color/white"
-            android:layout_marginTop="@dimen/_20sdp"/>
+            android:layout_marginTop="@dimen/_32sdp"/>
 
-
+        <TextView
+            android:id="@+id/interest_result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:textSize="@dimen/_16sdp"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold"
+            android:layout_marginTop="@dimen/_28sdp"
+            android:text="Your Interest amount is "/>
 
     </LinearLayout>
 
